v0.8.13 build 384
- ADD: added `S50downloadmaster.stock.sh` to the repo, this is the original stock firmware script + added a "properly" formatted version, my eyes were bleeding re-reading the stock script!
- CHG: set `sleep 10` (seconds) in `S50downloadmaster.sh`, 60 caused issues with blocking as this script runs whenever the firewall is restarted, 0 also caused issues, and 10 is a compromise. Try 5, but might not work well on lower powered processors.
- DOC: added `.claude\plan_add_stock_support.md`.
- DOC: extensive updates to `ARCHITECTURE.md` to account for the nvram differences between Merlin and stock.
- DOC: updated `.claude\context.md`, a complete rewrite.
- DOC: updated `BUILDING.md` with name of new `scripts\pin-actions-latest.sh`.
- DOC: updates to README.md on enabling support for Stock firmware.
- GUI: changed wording of exit app confirmation screen to "Exit cfg-pia-wg?"
- NOTE: having more than two concurrent WireGuard slots is not supported on stock firmware but can be overridden by `nvram set vpnc_max_conn=X; nvram commit` - enabling 5 causes issues at boot (no VPNs connect).
- REL: added .gitignore exclusion for `./gradle` folder
- REL: ported `build.ps1` to `build.sh` (bash version wasn't in sync with the PowerShell version).